<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.signin.SignInDialogFragment">

    <data>
        <variable
            name="viewModel"
            type="org.bubbble.andsplash.ui.signin.SignInDialogViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_start"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="?dialogPreferredPadding" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_end"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_end="?dialogPreferredPadding" />

        <TextView
            android:id="@+id/welcome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_normal"
            android:gravity="center_vertical"
            android:lines="1"
            android:minHeight="@dimen/profile_dialog_header_height"
            android:paddingBottom="@dimen/margin_normal"
            android:paddingTop="@dimen/margin_normal"
            android:text="@string/welcome"
            android:textAppearance="@style/TextAppearance.IOSched.AccountDialog.Username"
            app:layout_constraintEnd_toStartOf="@id/guideline_end"
            app:layout_constraintStart_toEndOf="@id/user_avatar"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/user_avatar"
            android:layout_width="@dimen/profile_dialog_account_image_size"
            android:layout_height="@dimen/profile_dialog_account_image_size"
            android:contentDescription="@null"
            app:layout_constraintBottom_toBottomOf="@id/welcome"
            app:layout_constraintStart_toEndOf="@id/guideline_start"
            app:layout_constraintTop_toTopOf="parent"
            app:clipToCircle="@{true}"
            app:srcCompat="@drawable/ic_default_profile_avatar" />

        <View
            android:id="@+id/divider1"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@drawable/list_divider"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/welcome" />

        <TextView
            android:id="@+id/message"
            style="?materialAlertDialogBodyTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/margin_normal"
            android:paddingBottom="@dimen/margin_normal"
            android:text="@string/dialog_sign_in_content"
            app:layout_constraintEnd_toStartOf="@id/guideline_end"
            app:layout_constraintStart_toEndOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/divider1"
            tools:style="@style/AlertDialog.BodyText"
            tools:ignore="PrivateResource" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/account_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/margin_small"
            android:paddingEnd="@dimen/margin_small"
            android:clipToPadding="false"
            android:background="@drawable/top_divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/message" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/account_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/margin_normal"
            android:paddingBottom="@dimen/margin_normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/account_list">

            <TextView
                android:id="@+id/user_name"
                style="@style/TextAppearance.IOSched.H3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_normal"
                android:ellipsize="end"
                android:maxLines="1"
                tools:text="Andrew Martin"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/user_email"
                app:layout_constraintEnd_toEndOf="@+id/user_email"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/user_email"
                style="@style/TextAppearance.IOSched.Body2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_normal"
                android:ellipsize="end"
                android:maxLines="1"
                tools:text="hujincan15369@Gmail.com"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/materialButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/user_name" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/materialButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="切换"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/remove"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/remove"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_small"
                android:layout_marginEnd="@dimen/margin_small"
                android:src="@drawable/ic_delete"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/divider4"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@drawable/list_divider"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/account_group" />

        <TextView
            android:id="@+id/settings"
            style="@style/Widget.IOSched.AccountDialog.ActionButton"
            android:textStyle="normal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/margin_normal"
            android:paddingBottom="@dimen/margin_normal"
            android:drawableStart="@drawable/ic_settings"
            android:text="设置"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider4" />

        <View
            android:id="@+id/divider3"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@drawable/list_divider"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settings" />

        <TextView
            android:id="@+id/sign_in"
            style="@style/Widget.IOSched.AccountDialog.ActionButton"
            android:textStyle="normal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/margin_normal"
            android:paddingBottom="@dimen/margin_normal"
            android:drawableStart="@drawable/ic_login"
            android:onClick="@{() -> viewModel.onSignIn()}"
            android:text="@string/sign_in"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settings" />

        <View
            android:id="@+id/divider2"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@drawable/list_divider"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sign_in" />

        <Button
            android:id="@+id/privacy_policy"
            style="@style/Widget.IOSched.BorderlessButton.NormalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_privacy_policy"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/bullet"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider2"
            app:websiteLink="@{@string/privacy_policy_url}" />

        <ImageView
            android:id="@+id/bullet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/terms_of_service"
            app:layout_constraintStart_toEndOf="@id/privacy_policy"
            app:layout_constraintTop_toBottomOf="@id/divider2"
            app:srcCompat="@drawable/bullet_small" />

        <Button
            android:id="@+id/terms_of_service"
            style="@style/Widget.IOSched.BorderlessButton.NormalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_tos"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/bullet"
            app:layout_constraintTop_toBottomOf="@id/divider2"
            app:websiteLink="@{@string/tos_url}" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>